tests/neg-custom-args/fatal-warnings/i2673c.scala
package Foos

object Outer {
  case class X() // error
  object x
}
